--- a/E-Commerce/style.css
+++ b/E-Commerce/style.css
@@ -68,6 +68,10 @@ body {
   align-items: center;
   justify-content: center;
 }
+#mobile {
+  display: none;
+  align-items: center;
+}
 #navbar li {
   list-style: none;
   padding: 0 20px;
@@ -325,6 +329,7 @@ button.white {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  padding: 0 80px;
 }
 
 #banner3 .banner-box {
@@ -451,4 +456,95 @@ footer .install img {
 footer .follow i:hover,
 footer a:hover {
   color: #088178;
+}
+#close {
+  display: none;
+}
+
+/* Home media query  */
+@media (max-width: 850px) {
+  .section-p1 {
+    padding: 40px 40px;
+  }
+  #navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    height: 100vh;
+    width: 300px;
+    background-color: #e3e6f3;
+    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+    padding: 80px 0 0 10px;
+    transition: 0.3s;
+  }
+  #navbar.active {
+    right: 470px;
+  }
+  #navbar li {
+    margin-bottom: 25px;
+  }
+  #mobile {
+    display: flex;
+    align-items: flex-start;
+  }
+  #mobile i {
+    color: #1a1a1a;
+    font-size: 24px;
+    padding-left: 20px;
+  }
+  #close {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    color: #1a1a1a;
+    font-size: 24px;
+  }
+  #lg-bag {
+    display: none;
+  }
+  #close {
+    display: initial;
+  }
+  #hero {
+    height: 70vh;
+    padding: 0 80px;
+    background-position: top 30% right 30%;
+  }
+  #feature {
+    justify-content: center;
+  }
+  #feature .fe-box {
+    margin: 15px 15px;
+  }
+  #product1 .pro-container {
+    justify-content: center;
+  }
+  #product1 .pro {
+    margin: 15px;
+  }
+  #banner {
+    height: 20vh;
+  }
+  #sm-banner .banner-box {
+    min-width: 100%;
+    height: 30vh;
+  }
+  #sm-banner {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+  #banner3 {
+    padding: 0 40px;
+  }
+  #banner3 .banner-box {
+    width: 28%;
+  }
+  #newsletter .form {
+    width: 70%;
+  }
 }
