--- a/E-Commerce/style.css
+++ b/E-Commerce/style.css
@@ -460,6 +460,88 @@ footer a:hover {
 #close {
   display: none;
 }
+/* Shop Section */
+#page-header {
+  background-image: url(img/banner/b1.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 50vh;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+}
+#page-header h2,
+#page-header p {
+  color: #fff;
+}
+#pagination {
+  text-align: center;
+}
+
+#pagination a {
+  color: #fff;
+  text-decoration: none;
+  padding: 15px 20px;
+  text-align: center;
+  background-color: #088178;
+}
+#pagination i {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+#prodetails {
+  display: flex;
+  margin-top: 20px;
+}
+/* single product */
+#prodetails .single-pro-image {
+  width: 40%;
+  margin-right: 50px;
+}
+.small-img-group {
+  display: flex;
+  justify-content: space-between;
+}
+
+.small-img-col {
+  flex-basis: 24%;
+  cursor: pointer;
+}
+
+#prodetails .single-pro-details {
+  padding-top: 30px;
+  width: 50%;
+}
+
+#prodetails .single-pro-details h4 {
+  padding: 40px 0 20px 0;
+}
+#prodetails .single-pro-details h4 {
+  font-size: 26px;
+}
+#prodetails .single-pro-details select {
+  display: block;
+  padding: 5px 10px;
+  margin-bottom: 10px;
+}
+#prodetails .single-pro-details input {
+  width: 50px;
+  height: 47px;
+  padding-left: 10px;
+  font-size: 16px;
+  margin-right: 10px;
+}
+#prodetails .single-pro-details input:focus {
+  outline: none;
+}
+#prodetails .single-pro-details span {
+  line-height: 25px;
+}
 
 /* Home media query  */
 @media (max-width: 850px) {
@@ -482,7 +564,7 @@ footer a:hover {
     transition: 0.3s;
   }
   #navbar.active {
-    right: 470px;
+    right: 0px;
   }
   #navbar li {
     margin-bottom: 25px;
@@ -536,7 +618,7 @@ footer a:hover {
   #sm-banner {
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 20px;
   }
   #banner3 {
     padding: 0 40px;
@@ -546,5 +628,59 @@ footer a:hover {
   }
   #newsletter .form {
     width: 70%;
+  }
+}
+
+@media (max-width: 477px) {
+  .section-p1 {
+    padding: 20px;
+  }
+  #header {
+    padding: 10px 30px;
+  }
+  h1 {
+    font-size: 38px;
+  }
+  h2 {
+    font-size: 32px;
+  }
+  #hero {
+    padding: 0 20px;
+    background-position: 55%;
+  }
+  #feature .fe-box {
+    width: 155px;
+    margin: 0 0 15px;
+  }
+  #feature {
+    justify-content: space-between;
+  }
+  #product1 .pro {
+    width: 100%;
+  }
+  #banner {
+    height: 40vh;
+  }
+  #banner3 {
+    padding: 0 20px;
+  }
+  #banner3 .banner-box {
+    width: 100%;
+  }
+  #newsletter .form {
+    width: 100%;
+  }
+
+  /* Single product */
+  #prodetails {
+    display: flex;
+    flex-direction: column;
+  }
+  #prodetails .single-pro-image {
+    width: 100%;
+    margin-right: 0px;
+  }
+  #prodetails .single-pro-details {
+    width: 100%;
   }
 }
